syntax = "proto3";

package api.order_optimization.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/order_optimization/v1;orderoptimizationv1";

// OrderOptimizationService 订单Optimization服务服务定义。
service OrderOptimizationService {
// MergeOrders 处理MergeOrders请求。
  rpc MergeOrders(MergeOrdersRequest) returns (MergeOrdersResponse);
// SplitOrder 处理Split订单请求。
  rpc SplitOrder(SplitOrderRequest) returns (SplitOrderResponse);
// AllocateWarehouse 处理AllocateWarehouse请求。
  rpc AllocateWarehouse(AllocateWarehouseRequest) returns (AllocateWarehouseResponse);
}

// OrderItem 订单Item消息结构。
message OrderItem {
  uint64 product_id = 1; // 产品id
  int32 quantity = 2; // 数量
  int64 price = 3; // 价格
}

// ShippingAddress Shipping地址消息结构。
message ShippingAddress {
  string name = 1; // 名称
  string phone = 2; // 电话
  string province = 3; // 省份
  string city = 4; // 城市
  string district = 5; // 区县
  string address = 6; // 地址
}

// MergedOrder Merged订单消息结构。
message MergedOrder {
  uint64 id = 1; // 唯一标识
  uint64 user_id = 2; // 用户唯一标识
  repeated uint64 original_order_ids = 3; // 订单唯一标识
  repeated OrderItem items = 4; // 项列表
  int64 total_amount = 5; // 总数金额
  int64 discount_amount = 6; // 折扣金额
  int64 final_amount = 7; // final金额
  ShippingAddress shipping_address = 8; // shipping地址
  string status = 9; // 状态
  google.protobuf.Timestamp created_at = 10; // 创建时间
  google.protobuf.Timestamp updated_at = 11; // 更新时间
}

// SplitOrder Split订单消息结构。
message SplitOrder {
  uint64 id = 1; // 唯一标识
  uint64 original_order_id = 2; // 订单唯一标识
  int32 split_index = 3; // split索引
  repeated OrderItem items = 4; // 项列表
  int64 amount = 5; // 金额
  uint64 warehouse_id = 6; // 仓库ID
  ShippingAddress shipping_address = 7; // shipping地址
  string status = 8; // 状态
  google.protobuf.Timestamp created_at = 9; // 创建时间
  google.protobuf.Timestamp updated_at = 10; // 更新时间
}

// WarehouseAllocation WarehouseAllocation消息结构。
message WarehouseAllocation {
  uint64 product_id = 1; // 产品id
  int32 quantity = 2; // 数量
  uint64 warehouse_id = 3; // 仓库ID
  double distance = 4; // 距离
}

// WarehouseAllocationPlan WarehouseAllocationPlan消息结构。
message WarehouseAllocationPlan {
  uint64 id = 1; // 唯一标识
  uint64 order_id = 2; // 订单唯一标识
  repeated WarehouseAllocation allocations = 3; // 分配
  google.protobuf.Timestamp created_at = 4; // 创建时间
  google.protobuf.Timestamp updated_at = 5; // 更新时间
}

// MergeOrdersRequest MergeOrders请求消息结构。
message MergeOrdersRequest {
  uint64 user_id = 1; // 用户唯一标识
  repeated uint64 order_ids = 2; // 订单唯一标识
}

// MergeOrdersResponse MergeOrders响应消息结构。
message MergeOrdersResponse {
  MergedOrder merged_order = 1; // merged订单
}

// SplitOrderRequest Split订单请求消息结构。
message SplitOrderRequest {
  uint64 order_id = 1; // 订单唯一标识
}

// SplitOrderResponse Split订单响应消息结构。
message SplitOrderResponse {
  repeated SplitOrder split_orders = 1; // 拆分orders
}

// AllocateWarehouseRequest AllocateWarehouse请求消息结构。
message AllocateWarehouseRequest {
  uint64 order_id = 1; // 订单唯一标识
}

// AllocateWarehouseResponse AllocateWarehouse响应消息结构。
message AllocateWarehouseResponse {
  WarehouseAllocationPlan plan = 1; // 计划
}
