syntax = "proto3";

package api.order_optimization.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/order_optimization/v1;orderoptimizationv1";

// 订单优化服务，负责订单合并、拆分以及智能仓库分配逻辑。
service OrderOptimization {
  // 将同一用户、同一地址的多个订单合并为一个。
  rpc MergeOrders(MergeOrdersRequest) returns (MergeOrdersResponse);

  // 将超大或需异地发货的订单拆分为多个子订单。
  rpc SplitOrder(SplitOrderRequest) returns (SplitOrderResponse);

  // 根据库存和距离自动为订单分配最合适的发货仓库。
  rpc AllocateWarehouse(AllocateWarehouseRequest) returns (AllocateWarehouseResponse);
}

// 商品项。
message OrderItem {
  // 商品 ID。
  uint64 product_id = 1;
  // 数量。
  int32 quantity = 2;
  // 单价。
  int64 price = 3;
}

// 配送地址。
message ShippingAddress {
  // 收件人姓名。
  string name = 1;
  // 电话。
  string phone = 2;
  // 省。
  string province = 3;
  // 市。
  string city = 4;
  // 区。
  string district = 5;
  // 详细地址。
  string address = 6;
}

// 合并后的新订单详情。
message MergedOrder {
  // 唯一 ID。
  uint64 id = 1;
  // 用户 ID。
  uint64 user_id = 2;
  // 原原始订单 ID 集合。
  repeated uint64 original_order_ids = 3;
  // 合并后的商品清单。
  repeated OrderItem items = 4;
  // 总金额。
  int64 total_amount = 5;
  // 合并产生的额外折扣。
  int64 discount_amount = 6;
  // 最终应付金额。
  int64 final_amount = 7;
  // 配送地址。
  ShippingAddress shipping_address = 8;
  // 状态。
  string status = 9;
  // 创建时间。
  google.protobuf.Timestamp created_at = 10;
  // 修改时间。
  google.protobuf.Timestamp updated_at = 11;
}

// 拆分出的子订单详情。
message SplitOrder {
  // 唯一 ID。
  uint64 id = 1;
  // 原父订单 ID。
  uint64 original_order_id = 2;
  // 子订单序号。
  int32 split_index = 3;
  // 该子订单包含的商品。
  repeated OrderItem items = 4;
  // 子订单金额。
  int64 amount = 5;
  // 分配的仓库 ID。
  uint64 warehouse_id = 6;
  // 配送地址。
  ShippingAddress shipping_address = 7;
  // 状态。
  string status = 8;
  // 创建时间。
  google.protobuf.Timestamp created_at = 9;
  // 修改时间。
  google.protobuf.Timestamp updated_at = 10;
}

// 仓库分配明细。
message WarehouseAllocation {
  // 商品 ID。
  uint64 product_id = 1;
  // 数量。
  int32 quantity = 2;
  // 目标仓库 ID。
  uint64 warehouse_id = 3;
  // 仓库到配送地的预计距离（公里）。
  double distance = 4;
}

// 整体分配计划。
message WarehouseAllocationPlan {
  // 分配 ID。
  uint64 id = 1;
  // 关联订单 ID。
  uint64 order_id = 2;
  // 各商品的仓库分配策略。
  repeated WarehouseAllocation allocations = 3;
  // 创建时间。
  google.protobuf.Timestamp created_at = 4;
  // 修改时间。
  google.protobuf.Timestamp updated_at = 5;
}

// 合并请求。
message MergeOrdersRequest {
  // 用户 ID。
  uint64 user_id = 1;
  // 待合并订单 ID 列表。
  repeated uint64 order_ids = 2;
}

// 合并响应。
message MergeOrdersResponse {
  // 合并后的新订单。
  MergedOrder merged_order = 1;
}

// 拆分请求。
message SplitOrderRequest {
  // 待拆分的订单 ID。
  uint64 order_id = 1;
}

// 拆分响应。
message SplitOrderResponse {
  // 生成的子订单序列。
  repeated SplitOrder split_orders = 1;
}

// 分配请求。
message AllocateWarehouseRequest {
  // 目标订单 ID。
  uint64 order_id = 1;
}

// 分配响应。
message AllocateWarehouseResponse {
  // 计算出的最优分配计划。
  WarehouseAllocationPlan plan = 1;
}
